--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="author" content="Maciej Chajda" />
+    <meta
+      name="description"
+      content="Fabryka Wnętrz, projektowanie i aranżacja wnętrz"
+    />
+    <meta
+      name="keywords"
+      content="aranżacja wnętrz, opoczno, łódzkie, fabryka wnętrz"
+    />
     <link rel="icon" type="image/x-icon" href="@/assets/logofw.png" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
