--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       name="keywords"
       content="aranżacja wnętrz, opoczno, łódzkie, fabryka wnętrz"
     />
-    <link rel="icon" type="image/x-icon" href="@/assets/logofw.png" />
+    <link rel="icon" type="image/png" href="@/assets/logofw.png" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
